feat: add automatic notifications

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+APScheduler==3.11.0
 asgiref==3.8.1
 Django==5.2.1
+django-apscheduler==0.7.0
+django-cron==0.6.0
+django-crontab==0.7.1
 python-decouple==3.8
 sqlparse==0.5.3
 tzdata==2025.2
+tzlocal==5.3.1
 Unidecode==1.4.0
